# monorepo

./: README.md
day-inator/: README.md  day_inator.py
docs/iframe-fractal/: README.md  index.html
docs/pongwars/: README.md  index.html
dwg/: README.md  dwg.py
hanzi-flash/: README.md  hanzi_flash.py
jpg-unscrewer/: README.md  unscrewer.py
life/: README.md
life/src/: main.rs
loader/: README.md  loader.sh
make-linux-fast/: README.md  make-linux-fast.sh
number-speller/: README.md  caser.py  number-speller.py  number_speller.py
pico-stuff/: CMakeLists.txt  README.md  monstrosity.c  morse.c  tablegen.py  test.c  usb_descriptors.c
pongwars/: README.md  index.html
shaders/: README.md  star-wars.glsl
square_validator/: README.md  square_validator.py
